# structural_engineering_lib

./: .dockerignore  .env.example  .gitattributes  .gitignore  .lycheeexclude  .pre-commit-config.yaml  .scanner-ignore.yml  .xlwings.conf  404.html  AGENT-6-FINAL-HANDOFF-OLD.md  AGENT-6-FINAL-HANDOFF.md  AGENT-6-PHASE-1-COMPLETE.md  AGENT-6-SESSION-HANDOFF.md  AGENTS.md  AUTONOMOUS-FIXES-APPLIED.md  BETTER-TESTING-STRATEGY.md  BUG_FIX_PLAN.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DELEGATE-TO-BACKGROUND-AGENT.md  Dockerfile.fastapi  FIX-COPILOT-TERMINAL.md  FIX-IMPORT-ERROR.md  IMPORT-ERROR-FIXED.md  INCREMENTAL-WORKFLOW.md  INSTALLATION_NOTES.md  LICENSE  LICENSE_ENGINEERING.md  PHASE-1-ISSUES-FIXED.md  README.md  READY-TO-COMMIT-PHASE-1.md  RESEARCH-SUMMARY.md  SCANNER-ENHANCED-COMPLETE.md  SCANNER-ENHANCED.md  SECURITY.md  SESSION-HANDOFF-2026-01-09.md  SOLUTIONS-2-5-ANALYSIS.md  (+24 more)
Python/: .coveragerc  MANIFEST.in  README.md  index.json  index.md  pyproject.toml  pytest.ini  setup.cfg  test_stats.json
Python/.benchmarks/Darwin-CPython-3.9-64bit/: 0001_d803aab02adcf6d64025f756fbba86c3f4af03aa_20260106_165759_uncommited-changes.json  0002_d803aab02adcf6d64025f756fbba86c3f4af03aa_20260106_165827_uncommited-changes.json
Python/examples/: README.md  bmd_sfd_example.py  canonical_data_workflow.py  colab_workflow.py  complete_beam_design.py  demo_intelligence.py  end_to_end_workflow.py  full_pipeline_synthetic.py  index.json  index.md  professional_workflow.py  sample_job_report.json  simple_examples.py  validate_intelligence.py
Python/scripts/: pre_release_check.sh  regenerate_golden_files.py
Python/structural_lib/: README.md  __init__.py  __main__.py  adapters.py  api.py  api_results.py  audit.py  batch.py  bbs.py  beam_pipeline.py  calculation_report.py  compliance.py  constants.py  costing.py  csv_import.py  dashboard.py  data_types.py  detailing.py  ductile.py  dxf_export.py  error_messages.py  errors.py  etabs_import.py  excel_bridge.py  excel_integration.py  flexure.py  imports.py  index.json  index.md  inputs.py  intelligence.py  job_cli.py  job_runner.py  materials.py  models.py  multi_objective_optimizer.py  optimization.py  rebar.py  rebar_optimizer.py  report.py  (+12 more)
Python/structural_lib/_migration_fixtures/: __init__.py  sample_module.py
Python/structural_lib/cli/: clause_cli.py
Python/structural_lib/codes/: index.json  index.md
Python/structural_lib/core/: data_types.py  deprecation.py  error_messages.py  errors.py  geometry.py  index.json  index.md  inputs.py  logging_config.py  models.py  (+4 more)
Python/tests/: README.md  categorization_plan.txt  conftest.py  index.json  index.md  test_api_and_utilities.py  test_api_cost_optimization.py  test_api_results.py  test_api_stability.py  test_api_surface_snapshot.py  test_assertion_helpers.py  test_audit.py  test_bbs.py  test_bbs_dxf_consistency.py  test_beam_line_optimization.py  test_beam_pipeline.py  test_boq.py  test_calculation_report.py  test_clause_traceability.py  test_cli.py  test_cli_report_regression.py  test_column_axial.py  test_column_biaxial.py  test_column_helical.py  test_column_long.py  test_column_return_types.py  test_compliance.py  test_compliance_validation.py  test_compute_rebar_layout.py  test_contracts.py  test_core_types.py  test_cost_optimization.py  test_cost_optimization_bugs.py  test_costing.py  test_coverage_gaps.py  test_critical_is456.py  test_dashboard.py  test_deprecation.py  test_design_from_input.py  test_design_suggestions.py  (+60 more)
(+2996 files in other folders)
