[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structural-lib-is456"
version = "0.4.0"
description = "IS 456 RC Beam Design Library (flexure + shear + ductile detailing for RC beams)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Structural Engineering Library Project" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]
