[metadata]
name = structural-lib-is456
version = 0.7.0
description = IS 456 RC Beam Design Library (flexure + shear + ductile detailing)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Pravin Surawase
license_files = LICENSE

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.9
install_requires =
    # runtime dependencies (none yet)

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    mypy

[options.packages.find]
where = .
