[metadata]
name = structural-lib-is456
version = 0.7.0
description = IS 456 RC Beam Design Library (flexure + shear + ductile detailing)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Pravin Surawase
license_files = LICENSE

[options]
packages = find:
package_dir =
    = .
include_package_data = True
python_requires = >=3.9
install_requires =
    # runtime dependencies (none yet)

[options.package_data]
structural_lib =
    py.typed

[options.extras_require]
dev =
    pytest
    pytest-cov
    black
    mypy
    pre-commit

[options.packages.find]
where = .
